Revert "Fixed dependency cycle in DeMIMA"
This reverts commit 4d3e8a9f669d61b41880528fc55a014d0acaf1d6.